--- a/src/vaccination/MainPage.form
+++ b/src/vaccination/MainPage.form
@@ -34,10 +34,10 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="btnLogin" max="32767" attributes="0"/>
-                          <Component id="btnRegister" min="-2" pref="89" max="-2" attributes="0"/>
+                          <Component id="btnLogin" pref="115" max="32767" attributes="0"/>
+                          <Component id="btnRegister" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="74" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                   </Group>
                   <Component id="lblTitle" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
