--- a/src/vaccination/ManageVaccine.form
+++ b/src/vaccination/ManageVaccine.form
@@ -178,6 +178,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Generate PDF"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGeneratePdfActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
